BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Multichannel_Content_vod__c.object
<CustomObject>
    <description>The Multichannel_Content_vod object is the core object used to persist different types of metadata used in the Veeva Multichannel Framework.</description>
    <fields>
        <fullName>Cobrowse_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this presentation is allowed to be used in a CoBrowse session</description>
        <label>Allow Cobrowse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the presentation.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail Group associated to the presentation</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Multichannel Content (Detail Group)</relationshipLabel>
        <relationshipName>Multichannel_Content1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>Indicates the display order of the presentation when listed with other presentations</description>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expired_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Expired flag indicates if all child content has been expired (Status_vod = &apos;Expired_vod&apos;).</description>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Language attribute of the content. The picklist values can be expanded by the customer as needed. Values should be ISO codes of the associated language.</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presentation_Id_vod__c</fullName>
        <description>Presentation Id used for gotoSlide</description>
        <label>Presentation Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product associated to the presentation</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Multichannel Content (Product)</relationshipLabel>
        <relationshipName>Multichannel_Content_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM</description>
        <externalId>true</externalId>
        <label>Veeva External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vault_DNS_vod__c</fullName>
        <description>Vault DNS of the document.</description>
        <label>Vault DNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Doc_Id_vod__c</fullName>
        <description>Vault Id of the document</description>
        <label>Vault Doc Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_External_Id_vod__c</fullName>
        <description>External ID from Vault</description>
        <label>Vault External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_GUID_vod__c</fullName>
        <description>Global Unique Identifier for Vault instance where this document resides.</description>
        <label>Vault GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Multichannel Content</label>
    <nameField>
        <label>Multichannel Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multichannel Content</pluralLabel>
    <recordTypes>
        <fullName>Engage_Presentation_vod</fullName>
        <active>true</active>
        <description>For Engage Presentations</description>
        <label>Engage_Presentation_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>